--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- header section starts  -->
+
+<header>
+
+    <a href="#" class="logo">Restoran Neretva</a>
+
+    <div id="menu-bar" class="fas fa-bars"></div>
+
+    <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#speciality">specijaliteti</a> 
+        <a href="#review">ocjene</a>
+    </nav>
+
+</header>
+
+<!-- header section ends -->
+
     <script src="script.js"></script>
 </body>
 </html>
