--- a/index.html
+++ b/index.html
@@ -142,5 +142,46 @@
 <a href="#home" id="scroll-top"></a>
 
     <script src="script.js"></script>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Update jela</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="obrok-id" class="col-form-label">Id</label>
+                  <input type="text" class="form-control" id="obrok-id" disabled>
+                </div>
+                <div class="form-group">
+                  <label for="obrok-naziv" class="col-form-label">Jelo</label>
+                  <input type="text" class="form-control" id="obrok-naziv">
+                </div>
+                <div class="form-group">
+                  <label for="obrok-cijena" class="col-form-label">Cijena</label>
+                  <input type="text" class="form-control" id="obrok-cijena">
+                </div>
+                <div class="form-group">
+                  <label for="obrok-url" class="col-form-label">URL</label>
+                  <input type="text" class="form-control" id="obrok-url">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="updateJelo()">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
